fix: remove flex property cutting off text in main

--- a/docs/themes/hister/assets/css/main.css
+++ b/docs/themes/hister/assets/css/main.css
@@ -52,7 +52,6 @@ main {
     max-width: min(70em, 100%);
     margin: 0 auto;
     padding: 1em;
-    flex: 1 0 auto;
 }
 
 strong {
